se sube cambio respecto a la inforacion de catidad y color

--- a/index.html
+++ b/index.html
@@ -13,11 +13,18 @@
             <img class="laptop-img" src="assets/img/laptop.png" alt="">
             <h3> Laptop Gamer AMD</h3>
             <div class="input-card">
-                <input type="text" placeholder="Precio">
-                <input type="text" placeholder="Cantidad"">
+                <input type="text" placeholder="Cantidad">
+                <input type="text" placeholder="Color">
             </div>
             <p> Precio: $<span class="valor-laptop">400000</span></p>
             <button class="btn_total"> Calcular valor total</button>
+        </div>
+    </section>
+    <section class="info-card">
+        <div class="container-info">
+            <p>Total: <span class="total-info">$0</span></p>
+            <p>Cantidad: <span class="cantidad-info">0</span></p>
+            <p>Color: <span class="color-info"></span></p>
         </div>
     </section>
 </body>
